--- a/static/html/4.3_Slices.html
+++ b/static/html/4.3_Slices.html
@@ -37,6 +37,16 @@ class: left
 
 * [start..len] and [start..] slices till the end
 
+---
+class: left
+
+# Summary
+
+* Ownership, borrowing, and slices ensure memory safety in Rust programs at compile time. 
+
+* You control the memory usage by using the ownership rules and Rust automatically 
+  clean up that data when the owner goes out of scope
+
     </textarea>
   <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
   </script>
