--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
   <a style="display: flex; justify-content: center;">
-    <img style="width: 100px;" src="https://www.rust-lang.org/logos/rust-logo-128x128-blk-v2.png" alt="Rust Logo" />
+    <img style="width: 100px;" src="./static/images/rust-logo-256x256-blk.png" alt="Rust Logo" />
   </a>
 
   <h1 align="center">The Rust Programming Language</h1>
@@ -92,7 +92,11 @@
           3.4.
           <a href="./static/html/3.4_Comments.html">Comments</a>
         </li>
-      </ul>
+        <li>
+          3.5.
+          <a href="./static/html/3.5_Control_Flow.html">Control Flow</a>
+        </li>
+      </ul>      
     </li>
 
     <li>
@@ -118,7 +122,7 @@
       <ul>
         <li>
           5.1.
-          <a href="./static/html/4.1_What_is_Ownership.html">Defining and Instantiating Structs</a>
+          <a href="./static/html/5.1_Defining_and_Instantiating_Struct.html">Defining and Instantiating Structs</a>
         </li>
         <li>
           5.2.
