--- a/static/html/3.4_Comments.html
+++ b/static/html/3.4_Comments.html
@@ -4,7 +4,7 @@
 <head>
   <title>The Rust Programming Language - Slides</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
 <body>
@@ -34,11 +34,11 @@ class: left
 
 # Convention
 
-* Use this convetion
+* Use annotation convetion
 
 ```rust
 // I’m feeling lucky today.
-    let lucky_number = 7;
+let lucky_number = 7;
 ```
 
 * over this... 
@@ -46,6 +46,11 @@ class: left
 ```rust
     let lucky_number = 7; // I’m feeling lucky today.
 ```      
+
+---
+class: left
+
+# Summary
 
     </textarea>
   <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
