--- a/static/html/3.5_Control_Flow.html
+++ b/static/html/3.5_Control_Flow.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>The Rust Programming Language - Slides</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-  </head>
-  <body>
-    <textarea id="source">
+
+<head>
+  <title>The Rust Programming Language - Slides</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet" type="text/css" href="../css/styles.css">
+</head>
+
+<body>
+  <textarea id="source">
 class: middle, center
+
+### 3.5
 
 # Control Flow
 
-### Give a breif description of what these slides are about
-
 ---
-class: middle, left
+class: left
 
 # `if` Expressions
 
-```
+```rust
 fn main() {
   let number = 3;
-
   if number < 5 {
       println!("condition was true");
   } else {
@@ -30,32 +31,34 @@ fn main() {
 }
 ```
 
-* Starts with `if` keyword
+* Starts with **if** keyword
+
 * Follwed by condition, which should evaluate to boolean
-* Won't convert non boolean types to booleans
-* and block of code in `{}` called `arms`
+
+* Rust won't convert non boolean types to booleans
+
+* block of code in **{}** called **arms** is executed based on condition
 
 ---
-class: middle, left
+class: left
 
 # `else` expression
 
 * else expression is optional
-* evalutes if the condition is false
 
-
----
-class: middle, left
-
-# `else if` expression
-
-* multiple conditions with `else if`
-
+* evalutes if the **if expression** condition is false
 
 ---
-class: middle, left
+class: left
 
-# Using `if` in a `let` statement
+# **else if** expression
+
+* multiple conditions with **else if**
+
+---
+class: left
+
+# Using **if** in a **let** statement
 
 * since `if` is an expression we can use it in a statement and assign to a variable.
 
@@ -77,22 +80,21 @@ let number = if condition {
 } // expression; // statement
 ```
 
-is invalid
-
 ---
-class: middle, left
+class: left
 
 # Repetition with Loops
 
 * Execute a block of code more than once
-* Three types of loops, `loop`, 'while' and `for`
+
+* Three types of loops, **loop**, **while** and **for**
 
 ---
-class: middle, left
+class: left
 
 # Loop
 
-* Execute a block of code over and over again forever or until you explicitly tell it to stop.
+* Execute a block of code over and over, until you explicitly tell it to stop
 
 ```rust
 fn main() {
@@ -101,15 +103,17 @@ fn main() {
   }
 }
 ```
+
 * Cancel with `ctrl+c`
-* Or gracefully with a `break` keyword
+
+* Or gracefully cancel with a `break` keyword
 
 ---
-class: middle, left
+class: left
 
 # While
 
-* While a condition holds true, the code runs; otherwise, it exits the loop
+* Execute a block of code while a condition holds true
 
 ```rust
 fn main() {
@@ -126,22 +130,23 @@ fn main() {
 ```
 
 ---
-class: middle, left
+class: left
 
 # For
 
-* loop over the elements of a collection, such as an array
+* Loop over the elements of a collection, such as an array
 
 ```rust
 fn main() {
   let a = [10, 20, 30, 40, 50];
-
   for element in a.iter() {
       println!("the value is: {}", element);
   }
 }
 ```
+
 * or a range
+
 ```rust
 fn main() {
   for number in (1..4) {
@@ -152,18 +157,29 @@ fn main() {
 ```
 
 ---
-class: middle, left
+class: left
 
-# Title 9
+# Summary
 
-      
+* **if** and **else if** expression should have condition which evaluates to boolean
+
+* Blocks of code called **arms** are executed based on the condition value and 
+  all the arms should be of same type
+
+* **if** can be used in a statement and assigned to a variable
+
+* **loop** executes for ever untill **break**
+
+* **while** executes untill the condition is true
+
+* **for** executes for each element in the Arrary or range
 
     </textarea>
-    <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
-    </script>
-    <script type="text/javascript">
-      var slideshow = remark.create();
-    </script>
-  </body>
-</html>
+  <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
+  </script>
+  <script type="text/javascript">
+    var slideshow = remark.create();
+  </script>
+</body>
 
+</html>
