--- a/static/html/5.3_Method_Syntax.html
+++ b/static/html/5.3_Method_Syntax.html
@@ -3,7 +3,7 @@
   <head>
     <title>The Rust Programming Language - Slides</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
   </head>
   <body>
     <textarea id="source">
