--- a/static/html/template.html
+++ b/static/html/template.html
@@ -3,15 +3,15 @@
   <head>
     <title>The Rust Programming Language - Slides</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
   </head>
   <body>
     <textarea id="source">
 class: middle, center
 
+### chapter number
 # Title goes here
 
-### Give a breif description of what these slides are about
 
 ---
 class: middle, left
