--- a/static/html/template.html
+++ b/static/html/template.html
@@ -10,55 +10,13 @@
 class: middle, center
 
 ### chapter number
+
 # Title goes here
 
-
 ---
-class: middle, left
+class: left
 
 # Title 1
-
----
-class: middle, left
-
-# Title 2
-
----
-class: middle, left
-
-# Title 3
-
----
-class: middle, left
-
-# Title 4
-
----
-class: middle, left
-
-# Title 5
-
----
-class: middle, left
-
-# Title 6
-
----
-class: middle, left
-
-# Title 7
-
----
-class: middle, left
-
-# Title 8
-
----
-class: middle, left
-
-# Title 9
-
-      
 
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
