add: template for chapter 6

--- a/index.html
+++ b/index.html
@@ -140,16 +140,16 @@
       <ul>
         <li>
           6.1.
-          <a href="./static/html/4.1_What_is_Ownership.html"> Defining an Enum
+          <a href="./static/html/6.1_Defining_an_Enum.html"> Defining an Enum
           </a>
         </li>
         <li>
           6.2.
-          <a href="./static/html/4.1_What_is_Ownership.html">The match Control Flow Operator</a>
+          <a href="./static/html/6.2_The_match_Control_Flow_Operator.html">The match Control Flow Operator</a>
         </li>
         <li>
           6.3.
-          <a href="./static/html/4.3_Slices.html">Concise Control Flow with if let</a>
+          <a href="./static/html/6.3_Consise_Control_Flow_with_if_let.html">Concise Control Flow with if let</a>
         </li>
       </ul>
     </li>
