add: inital files for chapter 7

--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
       <ul>
         <li>
           7.1.
-          <a href="./static/html/4.1_What_is_Ownership.html"> mod and the Filesystem
+          <a href="./static/html/7.1_mod_and_the_Filesystem.html"> mod and the Filesystem
           </a>
         </li>
         <li>
           7.2.
-          <a href="./static/html/4.1_What_is_Ownership.html">Controlling Visibility with pub</a>
+          <a href="./static/html/7.2_Controlling_Visibility_with_pub.html">Controlling Visibility with pub</a>
         </li>
         <li>
           7.3.
-          <a href="./static/html/4.3_Slices.html">Referring to Names in Different Modules</a>
+          <a href="./static/html/7.3_Referring_to_Names_in_Different_Modules.html">Referring to Names in Different Modules</a>
         </li>
       </ul>
     </li>
