add: staring files for chapter 8

--- a/index.html
+++ b/index.html
@@ -178,16 +178,16 @@
       <ul>
         <li>
           8.1.
-          <a href="./static/html/4.1_What_is_Ownership.html"> Vectors
+          <a href="./static/html/8.1_Vectors.html"> Vectors
           </a>
         </li>
         <li>
           8.2.
-          <a href="./static/html/4.1_What_is_Ownership.html">Strings</a>
+          <a href="./static/html/8.2_Strings.html">Strings</a>
         </li>
         <li>
           8.3.
-          <a href="./static/html/4.3_Slices.html">Hash Maps</a>
+          <a href="./static/html/8.3_Hash_Maps.html">Hash Maps</a>
         </li>
       </ul>
     </li>
