add: basic files for 9th chapter

--- a/index.html
+++ b/index.html
@@ -197,16 +197,16 @@
       <ul>
         <li>
           9.1.
-          <a href="./static/html/4.1_What_is_Ownership.html"> Unrecoverable Errors with panic!
+          <a href="./static/html/9.1_Unrecoverable_Errors_with_panic!.html"> Unrecoverable Errors with panic!
           </a>
         </li>
         <li>
           9.2.
-          <a href="./static/html/4.1_What_is_Ownership.html">Recoverable Errors with Result</a>
+          <a href="./static/html/9.2_Recoverable_Errors_with_Result.html">Recoverable Errors with Result</a>
         </li>
         <li>
           9.3.
-          <a href="./static/html/4.3_Slices.html">To panic! or Not To panic!</a>
+          <a href="./static/html/9.3_To_panic!_or_Not_To_panic!.html">To panic! or Not To panic!</a>
         </li>
       </ul>
     </li>
