add: template files for tenth chapter

--- a/index.html
+++ b/index.html
@@ -216,16 +216,16 @@
       <ul>
         <li>
           10.1.
-          <a href="./static/html/4.1_What_is_Ownership.html"> Generic Data Types
+          <a href="./static/html/10.1_Generic_Data_Types.html"> Generic Data Types
           </a>
         </li>
         <li>
           10.2.
-          <a href="./static/html/4.1_What_is_Ownership.html">Traits: Defining Shared Behavior</a>
+          <a href="./static/html/10.2_Traits:_Defining_Shared_Behavior.html">Traits: Defining Shared Behavior</a>
         </li>
         <li>
           10.3.
-          <a href="./static/html/4.3_Slices.html">Validating References with Lifetimes</a>
+          <a href="./static/html/10.3_Validating_References_with_Lifetimes.html">Validating References with Lifetimes</a>
         </li>
       </ul>
     </li>
