add: 8.1 vectors and other improvements

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </li>
         <li>
           5.3.
-          <a href="./static/html/4.3_Slices.html">Method Syntax</a>
+          <a href="./static/html/5.3_Method_Syntax.html">Method Syntax</a>
         </li>
       </ul>
     </li>
