--- a/static/html/4.2_References_and_Borrowing.html
+++ b/static/html/4.2_References_and_Borrowing.html
@@ -58,6 +58,7 @@ class: left
 
 # Mutable References
 
+<!-- mutable reference is borrowing -->
 * Like variables, references are also immutable by default
 
 * Use `mut` to make it mutable
@@ -121,7 +122,7 @@ let r2 = &s; // no problem
 let r3 = &mut s; // BIG PROBLEM
 ```
 
-* even in different scopes
+<!-- * even in different scopes -->
 
 ---
 class: left
