--- a/static/html/template.html
+++ b/static/html/template.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>The Rust Programming Language - Slides</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
-  </head>
-  <body>
-    <textarea id="source">
-class: middle, center
 
-### chapter number
+<head>
+  <title>The Rust Programming Language - Slides</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet" type="text/css" href="../css/styles.css">
+</head>
 
-# Title goes here
+<body>
+  <!-- <textarea id="source">
+    </textarea> -->
+  <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
+  </script>
+  <script type="text/javascript">
+    var slideshow = remark.create({
+      sourceUrl: 'template.md'
+    });
+  </script>
+</body>
 
----
-class: left
-
-# Title 1
-
-    </textarea>
-    <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
-    </script>
-    <script type="text/javascript">
-      var slideshow = remark.create();
-    </script>
-  </body>
 </html>
-
