--- a/index.html
+++ b/index.html
@@ -46,19 +46,20 @@
   
   <ul>
     <li>
-      1 : Introduction
+      1 : 
+        <a href="./static/html/1.0_Introduction.html">Introduction</a>
       <ul>
         <li>
           1.1.
-          <a href="./static/html/4.1_What_is_Ownership.html">Installation</a>
+          <a href="./static/html/1.1_Installation.html">Installation</a>
         </li>
         <li>
           1.2.
-          <a href="./static/html/4.1_What_is_Ownership.html">Hello, World!</a>
+          <a href="./static/html/1.2_Hello_World!.html">Hello, World!</a>
         </li>
         <li>
           1.3.
-          <a href="./static/html/4.1_What_is_Ownership.html">How Rust is made and "Nightly Rust"</a>
+          <a href="./static/html/1.3_How_Rust_is_Made_and_Nightly_Rust.html">How Rust is made and "Nightly Rust"</a>
         </li>
       </ul>
     </li>
