Fix: minor fixes and updates

--- a/static/html/1.2_Hello_World!.html
+++ b/static/html/1.2_Hello_World!.html
@@ -129,6 +129,8 @@ $ cargo new hello_cargo --bin
 
 * **--lib** : Will create a library
 
+* Its a convention to use snake_case for crate names
+
 ---
 class: left
 
