--- a/static/html/10.1_Generic_Data_Types.html
+++ b/static/html/10.1_Generic_Data_Types.html
@@ -16,7 +16,13 @@ class: middle, center
 ---
 class: left
 
-# Title 1
+# Generics
+
+* Duplication of concepts is dealt with generics
+
+* They are abstract stand-ins for concrete types or other properties
+
+* 
 
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
