--- a/static/html/10.2_Traits:_Defining_Shared_Behavior.html
+++ b/static/html/10.2_Traits:_Defining_Shared_Behavior.html
@@ -20,6 +20,11 @@ class: left
 
 # Title 1
 
+* Traits are ways to add special behaviour to objects even though the objects 
+  are not yours
+
+
+
     </textarea>
   <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
   </script>
