--- a/static/html/3.5_Control_Flow.html
+++ b/static/html/3.5_Control_Flow.html
@@ -80,6 +80,9 @@ let number = if condition {
 } // expression; // statement
 ```
 
+* An if without an else always results in `()` as the value
+
+
 ---
 class: left
 
