--- a/static/html/4.1_What_is_Ownership.html
+++ b/static/html/4.1_What_is_Ownership.html
@@ -115,6 +115,7 @@ class: left
 
   // do stuff with s
 }                      // this scope is now over, and s is no longer valid
+println!("{}", s) // throws an error, s is no longer available
 ```
 
 ---
