--- a/static/html/5.1_Defining_and_Instantiating_Struct.html
+++ b/static/html/5.1_Defining_and_Instantiating_Struct.html
@@ -30,7 +30,8 @@ class: left
 
 # Define a Struct
 
-* Structs are defined with `struct` keyword, follwed by name
+* Structs are defined with `struct` keyword, follwed by name, starting 
+  with capital letter
 
 * Name should determine the significance of pieces of data grouped together
 
@@ -93,6 +94,8 @@ fn build_user(email: String, username: String) -> User {
   }
 }
 ```
+
+* These are called related funcitons
 
 ---
 class: left
