--- a/static/html/8.2_Strings.html
+++ b/static/html/8.2_Strings.html
@@ -58,6 +58,8 @@ class: left
 
 # String vs str
 
+* 'String' is a string buffer and `&str` is a view into string buffer
+
 * “strings” mean the `String` and the string slice `&str` types
   not just one of those types
 
