--- a/static/html/3.2_Data-Types.html
+++ b/static/html/3.2_Data-Types.html
@@ -53,7 +53,9 @@ class: left
 
 # Builtin Types
 
-* `scalar` and `compound`
+* `scalar` 
+
+* `compound`
 
 ---
 class: left
@@ -61,8 +63,14 @@ class: left
 # Scalar Types
 
 * scalar type represents a single value
-
-* integers, floating-point numbers, Booleans, and characters
+  
+  * integers 
+ 
+  * floating-point numbers
+ 
+  * Booleans, and 
+ 
+  * characters
 
 ---
 class: left
@@ -102,11 +110,51 @@ fn main() {
 ---
 class: left
 
+# floating-point numbers
+
+* Number types has the usual basic mathematical operations you’d expect 
+
+* addition
+
+* subtraction
+
+* multiplication
+
+* division and remainder
+
+---
+class: left
+
+# Example
+
+```rust
+fn main() {
+  // addition
+  let sum = 5 + 10;
+
+  // subtraction
+  let difference = 95.5 - 4.3;
+
+  // multiplication
+  let product = 4 * 30;
+
+  // division
+  let quotient = 56.7 / 32.2;
+
+  // remainder
+  let remainder = 43 % 5;
+}
+```
+---
+class: left
+
 # Boolean
 
-* `true` & `false`
-
 * Specified using `bool`
+
+* `true` 
+
+* `false`
 
 ```rust
 fn main() {
@@ -142,7 +190,9 @@ class: left
 
 * Compound types can group multiple values of other types into one type
 
-* Tuples and Arrays
+  * Tuples
+
+  * Arrays
 
 <!-- what about strings ? -->
 
@@ -165,6 +215,15 @@ fn main() {
   println!("The value of y is: {}", y);
 }
 ```
+
+* Can ignore the values with `_`
+
+* Tuple inside a tuple
+
+```rust
+let tup = (500, 6.4, ('X', 200))
+}
+```
 <!-- can tuples be extended -->
 
 ---
@@ -174,7 +233,7 @@ class: left
 
 ```rust
 fn main() {
-  let x: (i32, f64, char) = (500, 6.4, 'x');
+  let x: (i32, f64, char) = (500, 6.4, 'x'); // annotated
 
   let five_hundred = x.0;
 
