--- a/static/html/3.3_How_Funcitons_Work.html
+++ b/static/html/3.3_How_Funcitons_Work.html
@@ -93,7 +93,9 @@ class: left
 # Functions with Return Values
 
 * Functions can return values
+
 * Return type is synonymous with the value of the final expression
+
 * Return early using `return` keyword or last expression implicitly
 
 ---
@@ -108,6 +110,17 @@ fn five() -> i32 {
 ```
 
 * 5 is the last expression and it is returned implicitly
+
+* Functions that dosen't return anything returns empty tuple `()`
+
+---
+class: left
+
+# macros
+
+* Macros unline functions end with an `!`
+
+* Macros expand at compile time to more complex function calls
 
 ---
 class: left
