--- a/index.html
+++ b/index.html
@@ -3,30 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>The Rust Programming Language - Slides</title>
+  <title>The Rust Programming Language</title>
   <meta name="viewport" content="width=device-width; initial-scale=1.0;">
-  <style>
-    /* Shout-out to http://bettermotherfuckingwebsite.com/ for this CSS */
+  <link rel="stylesheet" type="text/css" href="./src/styles.css">
 
-    body {
-      margin: 40px auto;
-      max-width: 650px;
-      line-height: 1.6;
-      font-size: 18px;
-      color: #444;
-      padding: 0 10px;
-    }
-
-    h1,
-    h2,
-    h3 {
-      line-height: 1.2
-    }
-
-    li {
-      list-style: none;
-    }
-  </style>
 </head>
 
 <body>
@@ -43,23 +23,23 @@
     <a href="https://github.com/ashleygwilliams/a-very-brief-intro-to-rust">A very brief intro to Rust</a> and
     <a href="https://github.com/steveklabnik/rust-in-ten-slides">Rust in Ten slides</a>
   </p>
-  
+
   <ul>
     <li>
-      1 : 
-        <a href="./static/html/1.0_Introduction.html">Introduction</a>
+      1 :
+      <a href="#" onclick="render('1.0_Introduction')">Introduction</a>
       <ul>
         <li>
           1.1.
-          <a href="./static/html/1.1_Installation.html">Installation</a>
+          <a href="#" onclick="render('1.1_Installation')">Installation</a>
         </li>
         <li>
           1.2.
-          <a href="./static/html/1.2_Hello_World!.html">Hello, World!</a>
+          <a href="#" onclick="render('1.2_Hello_World!')">Hello, World!</a>
         </li>
         <li>
           1.3.
-          <a href="./static/html/1.3_How_Rust_is_Made_and_Nightly_Rust.html">How Rust is made and "Nightly Rust"</a>
+          <a href="#" onclick="render('1.3_How_Rust_is_Made_and_Nightly_Rust')">How Rust is made and "Nightly Rust"</a>
         </li>
       </ul>
     </li>
@@ -69,7 +49,7 @@
       <ul>
         <li>
           2.1.
-          <a href="./static/html/4.1_What_is_Ownership.html">Guessing Game</a>
+          <a href="#" onclick="render('4.1_What_is_Ownership')">Guessing Game</a>
         </li>
       </ul>
     </li>
@@ -79,25 +59,25 @@
       <ul>
         <li>
           3.1.
-          <a href="./static/html/3.1_Variables-and-Mutability.html">Variables and Mutability</a>
+          <a href="#" onclick="render('3.1_Variables-and-Mutability')">Variables and Mutability</a>
         </li>
         <li>
           3.2.
-          <a href="./static/html/3.2_Data-Types.html"> Data Types</a>
+          <a href="#" onclick="render('3.2_Data-Types')"> Data Types</a>
         </li>
         <li>
           3.3.
-          <a href="./static/html/3.3_How_Funcitons_Work.html">How Functions Work</a>
+          <a href="#" onclick="render('3.3_How_Funcitons_Work')">How Functions Work</a>
         </li>
         <li>
           3.4.
-          <a href="./static/html/3.4_Comments.html">Comments</a>
+          <a href="#" onclick="render('3.4_Comments')">Comments</a>
         </li>
         <li>
           3.5.
-          <a href="./static/html/3.5_Control_Flow.html">Control Flow</a>
+          <a href="#" onclick="render('3.5_Control_Flow')">Control Flow</a>
         </li>
-      </ul>      
+      </ul>
     </li>
 
     <li>
@@ -105,15 +85,15 @@
       <ul>
         <li>
           4.1.
-          <a href="./static/html/4.1_What_is_Ownership.html">What is Ownership</a>
+          <a href="#" onclick="render('4.1_What_is_Ownership')">What is Ownership</a>
         </li>
         <li>
           4.2.
-          <a href="./static/html/4.2_References_and_Borrowing.html">References and Borrowing</a>
+          <a href="#" onclick="render('4.2_References_and_Borrowing')">References and Borrowing</a>
         </li>
         <li>
           4.3.
-          <a href="./static/html/4.3_Slices.html">Slices</a>
+          <a href="#" onclick="render('4.3_Slices')">Slices</a>
         </li>
       </ul>
     </li>
@@ -123,15 +103,15 @@
       <ul>
         <li>
           5.1.
-          <a href="./static/html/5.1_Defining_and_Instantiating_Struct.html">Defining and Instantiating Structs</a>
+          <a href="#" onclick="render('5.1_Defining_and_Instantiating_Struct')">Defining and Instantiating Structs</a>
         </li>
         <li>
           5.2.
-          <a href="./static/html/4.1_What_is_Ownership.html">An Example Program Using Structs</a>
+          <a href="#" onclick="render('4.1_What_is_Ownership')">An Example Program Using Structs</a>
         </li>
         <li>
           5.3.
-          <a href="./static/html/5.3_Method_Syntax.html">Method Syntax</a>
+          <a href="#" onclick="render('5.3_Method_Syntax')">Method Syntax</a>
         </li>
       </ul>
     </li>
@@ -141,16 +121,16 @@
       <ul>
         <li>
           6.1.
-          <a href="./static/html/6.1_Defining_an_Enum.html"> Defining an Enum
+          <a href="#" onclick="render('6.1_Defining_an_Enum')"> Defining an Enum
           </a>
         </li>
         <li>
           6.2.
-          <a href="./static/html/6.2_The_match_Control_Flow_Operator.html">The match Control Flow Operator</a>
+          <a href="#" onclick="render('6.2_The_match_Control_Flow_Operator')">The match Control Flow Operator</a>
         </li>
         <li>
           6.3.
-          <a href="./static/html/6.3_Consise_Control_Flow_with_if_let.html">Concise Control Flow with if let</a>
+          <a href="#" onclick="render('6.3_Consise_Control_Flow_with_if_let')">Concise Control Flow with if let</a>
         </li>
       </ul>
     </li>
@@ -160,16 +140,16 @@
       <ul>
         <li>
           7.1.
-          <a href="./static/html/7.1_mod_and_the_Filesystem.html"> mod and the Filesystem
+          <a href="#" onclick="render('7.1_mod_and_the_Filesystem')"> mod and the Filesystem
           </a>
         </li>
         <li>
           7.2.
-          <a href="./static/html/7.2_Controlling_Visibility_with_pub.html">Controlling Visibility with pub</a>
+          <a href="#" onclick="render('7.2_Controlling_Visibility_with_pub')">Controlling Visibility with pub</a>
         </li>
         <li>
           7.3.
-          <a href="./static/html/7.3_Referring_to_Names_in_Different_Modules.html">Referring to Names in Different Modules</a>
+          <a href="#" onclick="render('7.3_Referring_to_Names_in_Different_Modules')">Referring to Names in Different Modules</a>
         </li>
       </ul>
     </li>
@@ -179,16 +159,16 @@
       <ul>
         <li>
           8.1.
-          <a href="./static/html/8.1_Vectors.html"> Vectors
+          <a href="#" onclick="render('8.1_Vectors')"> Vectors
           </a>
         </li>
         <li>
           8.2.
-          <a href="./static/html/8.2_Strings.html">Strings</a>
+          <a href="#" onclick="render('8.2_Strings')">Strings</a>
         </li>
         <li>
           8.3.
-          <a href="./static/html/8.3_Hash_Maps.html">Hash Maps</a>
+          <a href="#" onclick="render('8.3_Hash_Maps')">Hash Maps</a>
         </li>
       </ul>
     </li>
@@ -198,16 +178,16 @@
       <ul>
         <li>
           9.1.
-          <a href="./static/html/9.1_Unrecoverable_Errors_with_panic!.html"> Unrecoverable Errors with panic!
+          <a href="#" onclick="render('9.1_Unrecoverable_Errors_with_panic!')"> Unrecoverable Errors with panic!
           </a>
         </li>
         <li>
           9.2.
-          <a href="./static/html/9.2_Recoverable_Errors_with_Result.html">Recoverable Errors with Result</a>
+          <a href="#" onclick="render('9.2_Recoverable_Errors_with_Result')">Recoverable Errors with Result</a>
         </li>
         <li>
           9.3.
-          <a href="./static/html/9.3_To_panic!_or_Not_To_panic!.html">To panic! or Not To panic!</a>
+          <a href="#" onclick="render('9.3_To_panic!_or_Not_To_panic!')">To panic! or Not To panic!</a>
         </li>
       </ul>
     </li>
@@ -217,21 +197,27 @@
       <ul>
         <li>
           10.1.
-          <a href="./static/html/10.1_Generic_Data_Types.html"> Generic Data Types
+          <a href="#" onclick="render('10.1_Generic_Data_Types')"> Generic Data Types
           </a>
         </li>
         <li>
           10.2.
-          <a href="./static/html/10.2_Traits:_Defining_Shared_Behavior.html">Traits: Defining Shared Behavior</a>
+          <a href="#" onclick="render('10.2_Traits:_Defining_Shared_Behavior')">Traits: Defining Shared Behavior</a>
         </li>
         <li>
           10.3.
-          <a href="./static/html/10.3_Validating_References_with_Lifetimes.html">Validating References with Lifetimes</a>
+          <a href="#" onclick="render('10.3_Validating_References_with_Lifetimes')">Validating References with Lifetimes</a>
         </li>
       </ul>
     </li>
 
   </ul>
+  <script>
+    function render(fileName) {
+      sessionStorage.setItem("mdPath", `md/${fileName}.md`);
+      window.location = 'src/template.html';
+    }
+  </script>
 </body>
 
 </html>
