fix: moved template outside

--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
   </ul>
   <script>
     function render(fileName) {
-      sessionStorage.setItem("mdPath", `md/${fileName}.md`);
-      window.location = 'src/template.html';
+      sessionStorage.setItem("mdPath", `src/md/${fileName}.md`);
+      window.location = 'template.html';
     }
   </script>
 </body>
